# expense-tracker-bot

./: .env.sample  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.worker  TODO.md  categories.yml  category_instructions.txt  chat_history.json  docker-compose.yml  expense_categories.yml  hello.py  income_categories.yml  justfile  pyproject.toml
app/: main.py  worker.py
app/agent/: prompt.jinja2  service.py
app/agent/tools/: base.py
app/agent/tools/add_expense/: tool.py
app/agent/tools/edit_expense/: tool.py
app/agent/tools/query_expenses/: tool.py
app/api/: main.py
app/api/routers/: agent.py
app/bot/: __init__.py  main.py  utils.py
app/bot/handlers/: audio_message.py  command_message.py  file_message.py  text_message.py
app/models/: expense.py  income.py  movement.py
app/scheduler/: __init__.py  main.py
app/scheduler/recurrent_expenses/: main.py
app/storage/: base.py  google_sheets.py  google_sheets_mixin.py
app/storage/chat/: base.py  json_chat.py
app/storage/expenses/: base.py  google_sheets.py
app/storage/incomes/: base.py  google_sheets.py
app/utils/: categories.py  config.py  logger.py
app/utils/movement_classifier/: main.py
app/utils/movement_classifier/prompts/: system.jinja2  user.jinja2
scripts/: check_chats.sh  deploy.sh  logs.sh
