[project]
name = "expense-tracker-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi>=0.115.6",
    "gspread>=6.1.4",
    "openai>=1.58.1",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.9",
    "uvicorn>=0.34.0",
]
